<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dashboard"
    android:background="#F5F5F5">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView android:id="@+id/hei__welcome_to"
            android:textSize="20sp"
            android:layout_marginLeft="40dp"
            android:textColor="@color/hei__welcome_to_color"
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hei__welcome_to_string"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="90dp"
            android:text="@string/lets_start"
            android:textColor="@color/hei__welcome_to_color"
            android:textSize="32sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="130dp"
            android:text="@string/vacation"
            android:textColor="@color/hei__welcome_to_color"
            android:textSize="32sp" />
        <EditText
            android:paddingLeft="26dp"
            android:layout_width="268dp"
            android:layout_height="42dp"
            android:layout_marginTop="203dp"
            android:background="@drawable/custom_button"
            android:hint="Search here..."
            android:inputType="textEmailAddress"
            android:textAppearance="@style/email"
            android:layout_marginLeft="40dp"
            android:elevation="4dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:background="@drawable/search"
            android:layout_marginTop="203dp"
            android:layout_marginLeft="315dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="300dp"
            android:text="@string/popular"
            android:textColor="@color/hei__welcome_to_color"
            android:textSize="20sp" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>