<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".deskripsi2">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="430dp"
            android:id="@+id/bg_desk">
        </RelativeLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:background="@drawable/save"
            android:elevation="10dp"
            android:layout_marginTop="355dp"
            android:layout_marginLeft="306dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignTop="@+id/bg_desk"
            android:layout_marginTop="376dp"
            android:background="@drawable/custom_button">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bromo2"
                android:layout_marginTop="18dp"
                android:layout_marginLeft="31dp"
                style="@style/judul_desk"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jatim"
                android:drawableStart="@drawable/pin3"
                android:drawablePadding="10dp"
                android:layout_marginTop="60dp"
                android:layout_marginLeft="31dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating"
                style="@style/lokasi"
                android:layout_marginLeft="31dp"
                android:layout_marginTop="83dp"
                android:elevation="2dp"
                android:drawableStart="@drawable/rating"
                android:drawablePadding="7dp"/>
            <TextView
                android:layout_width="328dp"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:layout_marginLeft="31dp"
                android:text="@string/desk_bromo"
                style="@style/isi"
                android:layout_marginTop="110dp"/>
        </RelativeLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>