<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BeachFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F5F5F5">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:layout_marginTop="40dp"
            android:background="#FFFFFF"
            android:id="@+id/beach">
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="18dp"
                android:layout_height="15dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="34dp"
                android:background="@drawable/back2" />
            <TextView
                style="@style/favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/beach"></TextView>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="24.33dp"
                android:layout_height="21.31dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="330dp"
                android:background="@drawable/love2" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="16dp"
                android:layout_height="21.31dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="376dp"
                android:background="@drawable/pin" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/input_search"
            android:layout_alignTop="@+id/beach"
            android:layout_marginTop="105dp"
            >
            <EditText
                android:paddingLeft="26dp"
                android:layout_width="268dp"
                android:layout_height="42dp"
                android:background="@drawable/custom_button"
                android:hint="@string/hint_search"
                android:inputType="textEmailAddress"
                android:textAppearance="@style/email"
                android:layout_marginLeft="40dp"
                android:elevation="4dp"
                android:translationZ="4dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:background="@drawable/search"
                android:layout_marginLeft="315dp"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignTop="@id/input_search"
            android:background="@color/white"
            android:layout_marginTop="71dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="48 beach found"
                style="@style/filter_found"
                android:layout_marginTop="11dp"
                android:layout_marginLeft="31dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Filters"
                style="@style/filter_found"
                android:layout_marginTop="11dp"
                android:layout_marginLeft="322dp"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="14dp"
                android:layout_height="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="360dp"
                android:background="@drawable/filter"/>
            <RelativeLayout
                android:id="@+id/nihiwatu"
                android:layout_width="329dp"
                android:layout_height="214dp"
                android:layout_marginTop="57dp"
                android:layout_centerHorizontal="true">
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="329dp"
                    android:layout_height="214dp"
                    android:background="@drawable/custom_button"
                    android:layout_centerHorizontal="true"
                    android:elevation="30dp"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="329dp"
                    android:layout_height="139dp"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/love4"
                    android:layout_marginLeft="292dp"
                    android:layout_marginTop="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nihiwatu"
                    style="@style/judul"
                    android:layout_marginLeft="14dp"
                    android:layout_marginTop="145dp"
                    android:elevation="2dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ntt1"
                    style="@style/lokasi"
                    android:layout_marginLeft="14dp"
                    android:layout_marginTop="170dp"
                    android:elevation="2dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rating"
                    style="@style/lokasi"
                    android:layout_marginLeft="14dp"
                    android:layout_marginTop="190dp"
                    android:elevation="2dp"
                    android:drawableStart="@drawable/rating"
                    android:drawablePadding="7dp"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/nusa_penida"
                android:layout_width="329dp"
                android:layout_height="214dp"
                android:layout_marginTop="242dp"
                android:layout_centerHorizontal="true"
                android:layout_alignTop="@id/nihiwatu">
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="329dp"
                    android:layout_height="214dp"
                    android:background="@drawable/custom_button"
                    android:layout_centerHorizontal="true"
                    android:elevation="30dp"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="329dp"
                    android:layout_height="139dp"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/love4"
                    android:layout_marginLeft="292dp"
                    android:layout_marginTop="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nusa_penida"
                    style="@style/judul"
                    android:layout_marginLeft="14dp"
                    android:layout_marginTop="145dp"
                    android:elevation="2dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bali"
                    style="@style/lokasi"
                    android:layout_marginLeft="14dp"
                    android:layout_marginTop="170dp"
                    android:elevation="2dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rating"
                    style="@style/lokasi"
                    android:layout_marginLeft="14dp"
                    android:layout_marginTop="190dp"
                    android:elevation="2dp"
                    android:drawableStart="@drawable/rating"
                    android:drawablePadding="7dp"/>
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
