<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".favorite">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F5F5F5">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:layout_marginTop="40dp"
            android:background="#FFFFFF"
            android:id="@+id/favorite">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="18dp"
                android:layout_height="15dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="34dp"
                android:background="@drawable/back2" />

            <TextView
                style="@style/favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/favorite"></TextView>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="24.33dp"
                android:layout_height="21.31dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="330dp"
                android:background="@drawable/love2" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="16dp"
                android:layout_height="21.31dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="376dp"
                android:background="@drawable/pin" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/input_search"
            android:layout_alignTop="@+id/favorite"
            android:layout_marginTop="105dp"
            >
            <EditText
                android:paddingLeft="26dp"
                android:layout_width="268dp"
                android:layout_height="42dp"
                android:background="@drawable/custom_button"
                android:hint="@string/hint_search"
                android:inputType="textEmailAddress"
                android:textAppearance="@style/email"
                android:layout_marginLeft="40dp"
                android:elevation="4dp"
                android:translationZ="4dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:background="@drawable/search"
                android:layout_marginLeft="315dp"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignTop="@id/input_search"
            android:background="@color/white"
            android:layout_marginTop="71dp">
            <RelativeLayout
                android:id="@+id/bromo"
                android:layout_width="330dp"
                android:layout_height="130dp"
                android:layout_marginTop="26dp"
                android:layout_centerHorizontal="true">
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="330dp"
                    android:layout_height="130dp"
                    android:background="@drawable/custom_button"
                    android:layout_centerHorizontal="true"
                    android:elevation="10dp"
                    />
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="95dp"
                    android:layout_height="96dp"
                    android:background="@drawable/bromo3"
                    android:layout_marginTop="45dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="14dp"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bromo"
                    style="@style/bromo"
                    android:background="@null"
                    android:layout_marginLeft="124dp"
                    android:layout_marginTop="25dp"
                    android:textAllCaps="false"
                    android:gravity="left|center"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jawa_timur"
                    style="@style/jawa_timur"
                    android:background="@null"
                    android:layout_marginLeft="124dp"
                    android:layout_marginTop="65dp"
                    android:textAllCaps="false"
                    android:drawableStart="@drawable/pin2"
                    android:drawablePadding="5dp"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="21dp"
                    android:layout_height="18dp"
                    android:background="@drawable/love3"
                    android:layout_marginTop="28dp"
                    android:layout_marginLeft="289dp"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/pink_beach"
                android:layout_width="330dp"
                android:layout_height="130dp"
                android:layout_marginTop="158dp"
                android:layout_centerHorizontal="true"
                android:layout_alignTop="@id/bromo">
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="330dp"
                    android:layout_height="130dp"
                    android:background="@drawable/custom_button"
                    android:layout_centerHorizontal="true"
                    android:elevation="10dp"
                    />
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="95dp"
                    android:layout_height="96dp"
                    android:background="@drawable/pink_beach2"
                    android:layout_marginTop="45dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="14dp"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/p_beach"
                    style="@style/bromo"
                    android:background="@null"
                    android:layout_marginLeft="124dp"
                    android:layout_marginTop="25dp"
                    android:textAllCaps="false"
                    android:gravity="left|center"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ntt"
                    style="@style/jawa_timur"
                    android:background="@null"
                    android:layout_marginLeft="124dp"
                    android:layout_marginTop="65dp"
                    android:textAllCaps="false"
                    android:drawableStart="@drawable/pin2"
                    android:drawablePadding="5dp"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="21dp"
                    android:layout_height="18dp"
                    android:background="@drawable/love3"
                    android:layout_marginTop="28dp"
                    android:layout_marginLeft="289dp"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/dieng"
                android:layout_width="330dp"
                android:layout_height="130dp"
                android:layout_marginTop="158dp"
                android:layout_centerHorizontal="true"
                android:layout_alignTop="@id/pink_beach">
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="330dp"
                    android:layout_height="130dp"
                    android:background="@drawable/custom_button"
                    android:layout_centerHorizontal="true"
                    android:elevation="10dp"
                    />
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="95dp"
                    android:layout_height="96dp"
                    android:background="@drawable/dieng2"
                    android:layout_marginTop="45dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="14dp"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dieng"
                    style="@style/bromo"
                    android:background="@null"
                    android:layout_marginLeft="124dp"
                    android:layout_marginTop="25dp"
                    android:textAllCaps="false"
                    android:gravity="left|center"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jawa_tengah"
                    style="@style/jawa_timur"
                    android:background="@null"
                    android:layout_marginLeft="124dp"
                    android:layout_marginTop="65dp"
                    android:textAllCaps="false"
                    android:drawableStart="@drawable/pin2"
                    android:drawablePadding="5dp"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="21dp"
                    android:layout_height="18dp"
                    android:background="@drawable/love3"
                    android:layout_marginTop="28dp"
                    android:layout_marginLeft="289dp"/>
            </RelativeLayout>

        </RelativeLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>